--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -84,7 +84,7 @@ li {
   grid-template-rows: 1fr 1fr 1fr 1fr;
   align-items: start;
   row-gap: 20px;
-  column-gap: 30px;
+  column-gap: 60px;
   position: relative;
   right: 24px;
 }
